# libome_rs

./: CLAUDE.md  Cargo.toml  README.md  UPSTREAM.md  build.rs
.github/workflows/: ci.yml
src/: ffi.rs  gsl_shim.cpp  lib.rs  macros.rs  main.rs  mellin.rs
src/polarized/: a_qg.rs  a_qq_ps.rs  a_qq_ps_s.rs  agg_q.rs  agq_q.rs  aqg_q.rs  aqq_q_ns_even.rs  aqq_q_ns_odd.rs  aqq_q_ps.rs  mod.rs
src/unpolarized/: a_qg.rs  a_qq_ps.rs  a_qq_ps_s.rs  agg_q.rs  agq_q.rs  aqg_q.rs  aqq_q_ns_even.rs  aqq_q_ns_odd.rs  aqq_q_ps.rs  mod.rs
tests/: mellin.rs  xspace.rs
